# TTT

./: .gitignore  pyproject.toml  setup.py
.github/workflows/: deploy-backend.yml
hf_backend/: Dockerfile  README.md  app.py  index.html  pyproject.toml  requirements.txt  run.py
hf_backend/app/: __init__.py  main.py
hf_backend/app/api/: __init__.py  routes.py
hf_backend/app/core/: __init__.py  config.py
hf_backend/app/db/: __init__.py  crud.py  database.py
hf_backend/app/services/: __init__.py  worker.py
ttt/: __init__.py  base.py  common.py  ollama_processor.py  ollama_service.py  qwen.py  runner.py
