[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ttt-runner-backend"
version = "2.0.0"
description = "FastAPI backend for TTT Runner"
dependencies = [
    "fastapi",
    "uvicorn",
    "aiosqlite",
    "aiofiles",
    "python-multipart",
    "custom_logger @ git+https://github.com/jebin2/custom_logger.git",
    "ttt-runner @ git+https://github.com/jebin2/TTT.git"
]

[project.scripts]
ttt-backend = "app.main:app"
